@@ -1,3 +1,10 @@
+2010-08-04  v0.9.1  r286
+------------------------------------------------------------------------
+
+  * Prevent dumping of EVFILT_VNODE debugging information to STDOUT.
+
+  * Fix the 'make clean' target in the testsuite.
+
 2010-08-01  v0.9    r285
 ------------------------------------------------------------------------
 
